# limbus-image

./: Cargo.toml  README.md
src/: args.rs  config.rs  files.rs  images.rs  main.rs
test/: config.toml
test/asset/: 0.xcf  gradeint_template.xcf
test/input/assets/: Outlines.xcf
