[package]
name = "limbus-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
serde = { version = "1.0.195", features = ["derive"] }
textwrap = "0.16.0"
toml = "0.8.8"
