[package]
name = "limbus-image"
version = "0.3.0"
edition = "2021"
description = "CLI Limbus company image generator"
readme = "README.md"
repository = "https://github.com/FireIsGood/limbus-image"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.2"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
serde = { version = "1.0.195", features = ["derive"] }
textwrap = "0.16.0"
toml = "0.8.8"
