[package]
name = "limbus-image"
version = "0.4.2"
edition = "2021"
description = "CLI Limbus company image generator"
readme = "README.md"
repository = "https://github.com/FireIsGood/limbus-image"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["test/*"]

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.2"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
serde = { version = "1.0.195", features = ["derive"] }
textwrap = "0.16.0"
thiserror = "1.0.56"
toml = "0.8.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }
unwrap_used = { level = "deny", priority = -3 }

[profile.release]
panic = "abort"
strip = "symbols"
